crates/weft-snapshots/tests/snapshots/react-tsx/corpus-layout.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-layout as react-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _url(value: string): string | undefined {
  const url = value.replace(/[\t\n\r]/g, "").replace(/^[\u0000- ]+|[\u0000- ]+$/g, "");
  if (url === "") return undefined;
  const colon = url.indexOf(":");
  const delimiter = url.search(/[/?#]/);
  if (colon < 0 || (delimiter >= 0 && colon > delimiter)) return url;
  const scheme = /^([A-Za-z][A-Za-z0-9+.-]*):/.exec(url)?.[1]?.toLowerCase();
  return scheme === "http" || scheme === "https" || scheme === "mailto" ? url : undefined;
}

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="layout" aria-label="Layout">
      <div data-weft-id="toolbar" style={{ gap: "var(--weft-space-sm)", display: "flex", flexDirection: "row", alignItems: "center" }}>
        <div data-weft-field="">
          <label>
            <span aria-hidden="true">Search</span>
            <input data-weft-id="search" aria-label="Search" type="search" value={_text(data?.query)} onChange={(_e) => onChange?.("$.query", _e.currentTarget.value)} />
          </label>
        </div>
        <button data-weft-id="filter" type="button" onClick={(_e) => _act(actions, { id: "filter", action: "list.filter" })}>Filter</button>
      </div>
      <div data-weft-id="pager" style={{ gap: "var(--weft-space-sm)", display: "flex", flexDirection: "row", alignItems: "center" }}>
        {(() => {
          const _href = _url("");
          return (
            <a data-weft-id="previous" href={_href} role={_href === undefined ? "link" : undefined} tabIndex={_href === undefined ? 0 : undefined} onKeyDown={_href === undefined ? (_e) => { if (_e.key !== "Enter" || _e.target !== _e.currentTarget) return; _e.preventDefault(); _act(actions, { id: "previous", action: "list.previous" }); } : undefined} onClick={() => _act(actions, { id: "previous", action: "list.previous" })} style={{ display: "inline-block" }}>Previous</a>
          );
        })()}
        {(() => {
          const _href = _url("");
          return (
            <a data-weft-id="next" href={_href} role={_href === undefined ? "link" : undefined} tabIndex={_href === undefined ? 0 : undefined} onKeyDown={_href === undefined ? (_e) => { if (_e.key !== "Enter" || _e.target !== _e.currentTarget) return; _e.preventDefault(); _act(actions, { id: "next", action: "list.next" }); } : undefined} onClick={() => _act(actions, { id: "next", action: "list.next" })} style={{ display: "inline-block" }}>Next</a>
          );
        })()}
      </div>
      <div data-weft-id="actions" style={{ gap: "var(--weft-space-sm)", display: "flex", flexDirection: "row", alignItems: "center" }}>
        <button data-weft-id="cancel" type="button" onClick={(_e) => _act(actions, { id: "cancel", action: "list.cancel" })}>Cancel</button>
        <button data-weft-id="save" type="button" data-variant="primary" onClick={(_e) => _act(actions, { id: "save", action: "list.save" })}>Save</button>
      </div>
    </main>
  );
}
